WhoAmI endpoint
Added a WhoAmI endpoint in the Authentication Service. Also added tests.
